--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,18 @@ body{
     background-color: #4a4a4a;
 }
 
+img{
+    width: 100%;
+}
+
+.btn:hover{
+    cursor: pointer;
+
+}
+
 /* HEADER */
 header{
-    height: 80px;
+    height: 60px;
     background-color: black;
 }
 
@@ -36,7 +45,7 @@ header{
 
 /* MAIN */
 main{
-    height: calc(100vh - 160px);
+    height: calc(100vh - 120px);
     display: flex;
     justify-content: center;
     align-content: flex-start;
@@ -47,6 +56,7 @@ main{
 
 .single-user{
     margin: 5px;
+    width: 190px;
 }
 
 .user-windows{
@@ -63,6 +73,34 @@ main{
 
 /* FOOTER */
 footer{
-    height: 80px;
-    background-color: lightgreen;
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    text-align: center;
+    background-color: #222222;
+}
+
+.flex-centred{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.button-audio-and-video{
+    width: 10%;
+    margin-left: 5px;
+}
+
+.footer-menu-button{
+   width: 35%;
+}
+
+.active i{
+    color: #4cc800;
+}
+
+.end-meeting{
+    padding: 0 10px;
+    color: red;
+    background-color: rgba(102, 116, 129, 0.7);
 }
